# fiware-monitoring

./: .bumpversion.sh  .gitattributes  .gitignore  .travis.yml  ContributionPolicy.txt  README.md  README.rst  apiary.apib  conf.py  index.rst
doc/: README.rst  admin_guide.rst  conf.py  index.rst  user_guide.rst
doc/_static/: mystyle.css
doc/manuals/admin/: README.rst  build_source.rst  index.rst  logs.rst  resources.rst
doc/manuals/user/: README.rst  index.rst
ngsi_adapter/: .bumpversion.cfg  .gitignore  .gjslintrc  .jenkins.xml  .jshintrc  Gruntfile.js  README.md  README.rst  apiary.apib  package.json
ngsi_adapter/config/: logger.js  options.js
ngsi_adapter/docker/UnitTests/: Dockerfile  build.sh
ngsi_adapter/lib/: adapter.js  common.js  config.js  logger.js
ngsi_adapter/lib/parsers/: check_disk.js  check_load.js  check_mem.sh.js  check_procs.js  check_users.js
ngsi_adapter/lib/parsers/common/: base.js  factory.js  nagios.js
ngsi_adapter/lib/parsers/nagios/: check_disk.js  check_load.js  check_mem.sh.js  check_procs.js  check_users.js
ngsi_adapter/scripts/init.d/redhat/: ngsi_adapter
ngsi_adapter/scripts/init.d/ubuntu/: ngsi_adapter
ngsi_adapter/src/: .gitignore  .gjslintrc  .jshintrc  Gruntfile.js  README.md  package.json
ngsi_adapter/src/config/: logger.js  options.js
ngsi_adapter/src/lib/: adapter.js  common.js  logger.js
ngsi_adapter/src/lib/parsers/: bdw.js  check_cinder_api.js  check_cinder_scheduler.js  check_disk.js  check_glance_api.js  check_glance_registry.js  check_hostname.js  check_http_xifi.js  check_load.js  check_mem.js  check_mem.sh.js  check_neutron_server.js  check_nova_api.js  check_nova_cert.js  check_nova_conductor.js  check_nova_consoleauth.js  check_nova_novncproxy.js  check_nova_objectstore.js  check_nova_scheduler.js  check_procs.js  check_quantum_dhcp_agent.js  check_quantum_l3_agent.js  check_quantum_metadata_agent.js  check_quantum_openvswitch_agent.js  check_quantum_server.js  check_users.js  check_vm.js  owd.js  region.js
ngsi_adapter/src/lib/parsers/common/: base.js  factory.js  nagios.js
ngsi_adapter/src/lib/parsers/nagios/: check_disk.js  check_mem.sh.js  check_users.js
ngsi_adapter/src/test/acceptance/: README.rst  Vagrantfile  logging.conf  requirements.txt
ngsi_adapter/src/test/acceptance/commons/: constants.py  dataset_utils.py  logger_utils.py  remote_tail_utils.py  rest_client_utils.py  terrain_utils.py  utils.py
ngsi_adapter/src/test/acceptance/commons/ngsi_adapter_api_utils/: ngsi_adapter_client.py
ngsi_adapter/src/test/acceptance/settings/: dev-properties.json  logging.conf
ngsi_adapter/src/test/broker/: dummy_context_broker.js
ngsi_adapter/src/test/unit/: common.js  test_adapter.js  test_base_parser.js  test_check_disk.js  test_check_load.js  test_check_mem.sh.js  test_check_procs.js  test_check_users.js  test_logger.js  test_nagios_parser.js  test_options.js
ngsi_adapter/src/test/utils/: dummy_context_broker.js
ngsi_adapter/test/acceptance/: README.rst  Vagrantfile  requirements.txt
ngsi_adapter/test/acceptance/commons/: constants.py  remote_tail_utils.py  terrain_utils.py  utils.py
ngsi_adapter/test/acceptance/commons/ngsi_adapter_api_utils/: ngsi_adapter_client.py
ngsi_adapter/test/acceptance/features/component/send_data/: steps.py  terrain.py  (+1 more)
ngsi_adapter/test/acceptance/resources/probe_parsers/: qa_probe.js
ngsi_adapter/test/acceptance/resources/probe_sample_data/: check_disk_grouping_invalid_malformed.txt  check_disk_grouping_valid_template.txt  check_disk_nogrouping_valid_template.txt  check_procs_valid_template.txt
ngsi_adapter/test/acceptance/settings/: dev-properties.json
ngsi_adapter/test/broker/: dummy_context_broker.js
ngsi_adapter/test/unit/: common.js  test_adapter.js  test_base_parser.js  test_broker.js  test_check_disk.js  test_check_load.js  test_check_mem.sh.js  test_check_procs.js  test_check_users.js  test_config.js  test_logger.js  test_nagios_parser.js  test_options.js
ngsi_adapter/test/utils/: dummy_context_broker.js
ngsi_adapter/tools/devops/: develop.sh  package.sh  release.sh
ngsi_adapter/tools/devops/debian/: changelog  install  preinst
ngsi_adapter/tools/devops/redhat/SPECS/: fiware-monitoring-ngsi-adapter.spec
ngsi_adapter/tools/integration/develenv/: Monitoring-NGSIAdapter-1-Build_config.xml  Monitoring-NGSIAdapter-2-Package-deb_config.xml  Monitoring-NGSIAdapter-2-Package-rpm_config.xml  Monitoring-NGSIAdapter-3-Deploy_config.xml  Monitoring-NGSIAdapter-4-Acceptance-comp_config.xml  Monitoring-NGSIAdapter_config.xml  README.rst  jenkins.sh
ngsi_event_broker/: .bumpversion.cfg  .gitignore  .jenkins.xml  Doxyfile  Makefile.am  README.md  README.rst  configure.ac
ngsi_event_broker/src/: .gitignore  Makefile.am  argument_parser.c  argument_parser.h  metadata_parser.c  metadata_parser.h  ngsi_event_broker.c  ngsi_event_broker_common.c  ngsi_event_broker_common.h  ngsi_event_broker_fiware.c  ngsi_event_broker_fiware.h  ngsi_event_broker_host.c  ngsi_event_broker_snmp.c  ngsi_event_broker_xifi.c  ngsi_event_broker_xifi.h
ngsi_event_broker/test/: .gitignore  Makefile.am  suite_argument_parser.cc  suite_broker_common.cc  suite_broker_fiware.cc  suite_broker_host.cc  suite_broker_snmp.cc  suite_broker_xifi.cc  suite_broker_xifi_dem.cc  suite_broker_xifi_npm.cc  suite_broker_xifi_srv.cc  suite_config.h  suite_metadata_parser.cc
ngsi_event_broker/tools/devops/: develop.sh  package.sh  release.sh
ngsi_event_broker/tools/devops/debian/: changelog  postinst  postrm
ngsi_event_broker/tools/devops/redhat/SPECS/: fiware-monitoring-ngsi-event-broker.spec
ngsi_event_broker/tools/integration/develenv/: Monitoring-NGSIEventBroker-1-Build_config.xml  Monitoring-NGSIEventBroker-2-Package-deb_config.xml  Monitoring-NGSIEventBroker-2-Package-rpm_config.xml  Monitoring-NGSIEventBroker-3-Deploy_config.xml  Monitoring-NGSIEventBroker-4-Acceptance-comp_config.xml  Monitoring-NGSIEventBroker_config.xml  jenkins.sh
nova_event_listener/: README.md  nova_event_listener.py  requirements.txt
nova_event_listener/conf/: nova_event_listener.cfg
(+20 files in other folders)
